methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: value update is not a member of Boolean
                    { if (!estSurBiscuit()) {vuBiscuit()=True}}
                                             ^MethodsReturning:4: error: not found: value True
                    { if (!estSurBiscuit()) {vuBiscuit()=True}}
                                                         ^MethodsReturning:8: error: value update is not a member of Boolean
while (vuBiscuit() = false) {chercheur();transition()}} 
       ^MethodsReturning:8: error: type mismatch;
 found   : Unit
 required: Boolean
while (vuBiscuit() = false) {chercheur();transition()}} 
^